@@ -2,6 +2,9 @@ Unreleased
 Added
 * tpm2_rc_decode tool: Decode TPM_RC error codes.
 
+Modified
+* tpm2_quote: added -L option to support selection of multiple banks
+
 2015-10-19 Gang Wei <gang.wei@intel.com>
 * 1.0 release
 * 29 tools included
